--- a/week6/vite-project/package.json
+++ b/week6/vite-project/package.json
@@ -9,13 +9,17 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vee-validate/i18n": "^4.7.4",
+    "@vee-validate/rules": "^4.7.4",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
     "pinia": "^2.0.28",
     "sass": "^1.58.0",
+    "vee-validate": "^4.7.4",
     "vue": "^3.2.45",
     "vue-axios": "^3.5.2",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-loading-overlay": "^0.0.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
